--- a/ANDROID/app/src/main/res/values/strings.xml
+++ b/ANDROID/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="action_signup">Sign Up</string>
 </resources>
